code/RecipeHub/Web Client/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.arrow {
    border: solid black;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 3px;
}

.right {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
}

.left {
    transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
}

.up {
    transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
}

.down {
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
  line-height: 60px;
  background-color: #f5f5f5;
}

.ingredient {
    display: flex;
    flex-direction: row;
    margin: 10px;
    padding: 10px;
    justify-content: space-between;
    border: 1px solid #e5e5e5;
}

.ingredient .ingredient-name {
    margin: 0;
    flex-direction: column;
}

.ingredient-name-subtitle {
    font-size: 0.8em;
}

#recipe-list-wrapper {
    display: grid;
    flex-direction: column;
    width: 100%;
    height: 100%;
}

#recipe-filters {
    width: 200px;
    height: 100%;
    background-color: #eee;
}

#recipe-filter-header {
    font-size: 32px;
}

#site-header {
    height: 100px;
    width: 100vw;
    display: flex;
    margin: 0;
    padding: 0;
    flex-wrap: wrap;
    justify-content: center;
    align-content: space-between;
    font-size: 32px;
    color: #888;
    border-bottom: 1px solid #ccc;
    background-color: #eee;
}
#site-header * {
    margin: 0 10px;
}

#site-header a {
    color: #888;
    text-decoration: none;
}

#recipe-list-body {
    display: flex;
    flex-direction: row;
}

#recipe-list-main {
    width: 100%;
}

#recipe-search {
    width: 100%;
}

.recipe-list-item {
    width: 100%;
    border: 2px solid #ccc;
    padding: 4px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    flex-direction: row;
}

.recipe-name {
    font-size: 32px;
}

.recipe-author {
    font-size: 24px;
}

.recipe-list-item:hover {
    cursor: pointer
}

.recipe-list-item:hover {
    background-color: #eee;
}

.recipe-photos {
    display: flex;
    flex-direction: row;
}

.recipe-photo {
    width: 700px;
    height: 300px;
    margin: 4px;
    border: 1px solid #ccc;
}

.recipe-photo:hover {
    cursor: pointer;
}
.center-screen {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.recipe-info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
}

.recipe-info .recipe-name {
    margin: 0;
}

.recipe-collapse-header {
    display: flex;
    flex-direction: row;
    -webkit-justify-content: space-between;
    justify-content: space-between;
    width: 250px;
    font-size: 24px;
}

.non-styled-link {
    text-decoration: none;
    color: #000;
}

.center {
    display: flex;
    justify-content: center;
}

.buffer {
    margin-bottom: 20px;
}

